--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "dependencies": {
     "@nuxt/eslint": "1.12.1",
     "@nuxt/fonts": "0.12.1",
+    "@nuxtjs/tailwindcss": "6.14.0",
     "@primeuix/themes": "^2.0.2",
-    "eslint": "^9.0.0",
+    "eslint": "^9.39.2",
     "nuxt": "^4.2.2",
     "primevue": "^4.5.4",
     "sass-embedded": "^1.97.2",
