--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@nuxt/eslint": "1.12.1",
     "@nuxt/fonts": "0.12.1",
+    "@nuxt/icon": "2.2.0",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@primeuix/themes": "^2.0.2",
     "eslint": "^9.39.2",
