--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nuxt/icon": "2.2.0",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@primeuix/themes": "^2.0.2",
+    "@vueuse/nuxt": "14.1.0",
     "eslint": "^9.39.2",
     "nuxt": "^4.2.2",
     "primevue": "^4.5.4",
@@ -22,5 +23,6 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "type": "module"
+  "type": "module",
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
